# url-to-qr

./: README.md  pyproject.toml
url_to_qr/: cli.py
